SelectionBar does not hold data